--- a/src/sass/_about-product.scss
+++ b/src/sass/_about-product.scss
@@ -1,311 +1,306 @@
 /* Стили для подложки */
 
 .overlay {
-   
-   /* Скрываем подложку  */
-   opacity: 0;
-   visibility: hidden;
-   
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, .5);
-   z-index: 20;
-   transition: .3s all;
-   @media screen and (max-height:991px) {
-      overflow: scroll;
-   }
-}
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+  @media screen and (max-height: 991px) {
+    overflow: scroll;
+  }
+}
 
 /* Стили для модальных окон */
-.modal{
-   opacity: 0;
-   visibility: hidden;
+.modal {
+  opacity: 0;
+  visibility: hidden;
 }
-.about-product{
-   
+.about-product {
+  /*  Установаем ширину окна  */
+  width: 100%;
+  max-width: 280px;
 
-   
-   /*  Установаем ширину окна  */
-   width: 100%;
-   max-width: 280px;
-   
-   /*  Центрируем и задаем z-index */
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   z-index: 30; /* Должен быть выше чем у подложки*/
-   
-   /*  Побочные стили   */
-   box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2); 
-   text-align: center;
-   padding: 28px 20px;
-   border-radius: 3px;
-   background-color: #FCFCFC;
-   transition: 0.3s all;
-   border: 2px solid #F8D24E;
-       @media screen and (max-height:968px) and (max-width:767px){
-      top: 10px;
-      transform: translate(-50%, 0);
-   }
-   @media screen and (max-height:982px) and (min-width:768px) {
-      top: 10px;
-      transform: translate(-50%, 0);
-   }
-   @media screen and (min-width:768px) {
-      max-width: 568px;
-      padding: 32px 40px;
-   }
+  /*  Центрируем и задаем z-index */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30; /* Должен быть выше чем у подложки*/
+
+  /*  Побочные стили   */
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 28px 20px;
+  border-radius: 3px;
+  background-color: #fcfcfc;
+  transition: 0.3s all;
+  border: 2px solid #f8d24e;
+  @media screen and (max-height: 968px) and (max-width: 767px) {
+    top: 10px;
+    transform: translate(-50%, 0);
+  }
+  @media screen and (max-height: 982px) and (min-width: 768px) {
+    top: 10px;
+    transform: translate(-50%, 0);
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 568px;
+    padding: 32px 40px;
+  }
 }
-
 
 /* Стили для активных классов подложки и окна */
 
 .modal.active,
-.overlay.active{
-   opacity: 1;
-   visibility: visible;
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
 }
-
 
 /* Стили для кнопки закрытия */
 
-.modal__close{
-   width: 13px;
-   height: 13px;
-   top: 12px;
-   right: 12px;
+.modal__close {
+  width: 13px;
+  height: 13px;
+  top: 12px;
+  right: 12px;
 
-   position: absolute;
+  position: absolute;
 }
-.modal-close{
-   fill: #000;
+.modal-close {
+  fill: #000;
 }
-
 
 /* Стили для кнопок. Мы ведь порядочные разработчики, негоже простые ссылки оставлять */
-.about-product{
-   display: flex;
-   align-items: center;
-   flex-direction: column;
+.about-product {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.about-product__title{
-   display: block;
-   font-family: 'Seymour One';
-   font-size: 16px;
-   line-height :1.5 ;
-   margin-bottom: 31px;
-      @media screen and (max-width:767px) {
-         max-width:142px ;
-   }
-   @media screen and (min-width:768px) {
-      font-size: 20px;
-      line-height: 1.4;
-      margin-bottom: 31px;
-   }
+.about-product__title {
+  display: block;
+  font-family: 'Seymour One';
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 31px;
+  @media screen and (max-width: 767px) {
+    max-width: 142px;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 31px;
+  }
 }
 
-
-.about-product__wrapper{
-   width: 132px;
-   height: 132px;
-   border-radius: 98px;
-   position: relative;
-   background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
-   box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
-   margin-bottom: 22px;
-       @media screen and (min-width:768px) {
-   margin-bottom: 25px;
+.about-product__wrapper {
+  width: 132px;
+  height: 132px;
+  border-radius: 98px;
+  position: relative;
+  background: linear-gradient(
+      0deg,
+      rgba(156, 190, 143, 0.7),
+      rgba(156, 190, 143, 0.7)
+    ),
+    #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+  margin-bottom: 22px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 25px;
+  }
+}
+.about-product__img {
+  position: absolute;
+  top: -7;
+  left: 0;
 }
 
-}
-.about-product__img{
-   position: absolute;
-   top: -7;
-   left: 0;
-}
-
-.about-product__facts{
-    display: flex;
-    gap: 9px;
+.about-product__facts {
+  display: flex;
+  gap: 9px;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
     margin-bottom: 40px;
-    @media screen and (min-width:768px) {
-    margin-bottom: 40px;
+  }
 }
-}
-.about-product__item{
-    width: 53px;
-    height: 72px;
-    border: 2px solid #9CBE8F;
-    border-radius: 40px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    @media screen and (min-width:768px) {
+.about-product__item {
+  width: 53px;
+  height: 72px;
+  border: 2px solid #9cbe8f;
+  border-radius: 40px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  @media screen and (min-width: 768px) {
     width: 65px;
     height: 90px;
+  }
 }
+.about-product__container {
+  position: absolute;
+  top: -2;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 43px;
+  height: 43px;
+  background: #9cbe8f;
+  border: 2px solid #9cbe8f;
+  box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @media screen and (min-width: 768px) {
+    width: 53px;
+    height: 53px;
+  }
 }
-.about-product__container{
-    position: absolute;
-    top: -2;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 43px;
-    height: 43px;
-    background: #9CBE8F;
-    border: 2px solid #9CBE8F;
-    box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-        @media screen and (min-width:768px) {
-width: 53px;
-height: 53px;
-}
-}
-.about-product__value{
-    font-weight: 500;
-    font-size: 10px;
-    line-height: calc(28/10);
-    @media screen and (min-width:768px) {
+.about-product__value {
+  font-weight: 500;
+  font-size: 10px;
+  line-height: calc(28 / 10);
+  @media screen and (min-width: 768px) {
     font-size: 12px;
-    line-height: calc(28/12);
+    line-height: calc(28 / 12);
+  }
 }
-}
-.about-product__text{
-    margin-top: auto;
-    margin-bottom: 8px;
-    font-size: 10px;
-    line-height: 12/10;
-        @media screen and (min-width:768px) {
-    font-size: 12px;     
+.about-product__text {
+  margin-top: auto;
+  margin-bottom: 8px;
+  font-size: 10px;
+  line-height: 12/10;
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
     line-height: 15/12;
     margin-bottom: 14px;
+  }
 }
-}
-.about-product__text--mb{
-    display: block;
-    @media screen and (min-width:768px) {
+.about-product__text--mb {
+  display: block;
+  @media screen and (min-width: 768px) {
     display: none;
+  }
 }
-}
-.about-product__text--desk{
-    display: none;
-    @media screen and (min-width:768px) {
+.about-product__text--desk {
+  display: none;
+  @media screen and (min-width: 768px) {
     display: block;
-}
+  }
 }
 
-.ingredients-title{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: calc(28/20);
-    margin-bottom: 24px;
+.ingredients-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: calc(28 / 20);
+  margin-bottom: 24px;
 }
-.ingredients{
-    margin-bottom: 40px;
-    display: block;
-    display: flex;
-    flex-direction: column;
-    gap: 11px;
-    width: 100%;
+.ingredients {
+  margin-bottom: 40px;
+  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  width: 100%;
 }
-.ingredients-item{
-    display: flex;
-    justify-content: space-between;
+.ingredients-item {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  line-height: 176%;
+}
+
+.about-product__form {
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    width: fit-content;
+  }
+}
+.about-product__group {
+  position: relative;
+  margin-bottom: 12px;
+  @media screen and (min-width: 768px) {
+    width: 368px;
+    margin-bottom: 16px;
+  }
+}
+.about-product__name {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.about-product__field {
+  width: 100%;
+  height: 32px;
+  padding: 0 12px;
+  background: rgba(248, 210, 78, 0.1);
+  border: none;
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  outline: unset;
+  font-size: 12px;
+  line-height: 1.4;
+
+  &:focus-within {
+    border: 2px solid #84a178;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 0 16px;
+    height: 42px;
     font-size: 14px;
-    line-height: 176%;
+    line-height: 1.4;
+  }
 }
-
-.about-product__form{
-    width: 100%;
-    @media screen and (min-width:768px) {
-        width: fit-content;
+.about-product__placeholder {
+  position: absolute;
+  left: 12px;
+  top: 11px;
 }
-}
-.about-product__group{
-   position: relative;
-   margin-bottom: 12px;
-   @media screen and (min-width:768px) {
-   width: 368px ;
-   margin-bottom: 16px;
-}
-}
-.about-product__name{
-   position: absolute;
-   left: 12px;
-   top: 50%;
-   transform: translateY(-50%);
-}
-.about-product__field{
-   width: 100%;
-   height: 32px;
-   padding: 0 12px;
-   background: rgba(248, 210, 78, 0.1);
-   border: none;
-   border: 1px solid #84A178;
-   border-radius: 10px;
-   outline: unset;
-   font-size: 12px;
-   line-height: 1.4;
-
-   &:focus-within{
-      border: 2px solid #84A178;
-   }
-      @media screen and (min-width:768px) {
-   padding: 0 16px;
-   height: 42px;
-   font-size: 14px;
-   line-height: 1.4;
-}
-}
-.about-product__placeholder{
-   position: absolute;
-   left: 12px;
-   top: 11px;
-}
-.about-product__message{
-   width: 100%;
-   height: 65px;
-   resize: none;
-   padding: 8 12px;
-   background: rgba(248, 210, 78, 0.1);
-   border: 1px solid #84A178;
-   border-radius: 10px;
-   outline: unset;
-      &:focus-within{
-      border: 2px solid #84A178;
-   }
-         @media screen and (min-width:768px) {
-   padding: 11 16px;
-   height: 84px;
-}
+.about-product__message {
+  width: 100%;
+  height: 65px;
+  resize: none;
+  padding: 8 12px;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  outline: unset;
+  &:focus-within {
+    border: 2px solid #84a178;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 11 16px;
+    height: 84px;
+  }
 }
 .about-product__label:focus-within .about-product__name,
 .about-product__field:not(:placeholder-shown) + .about-product__name,
 .about-product__label:focus-within .about-product__placeholder,
-.about-product__message:not(:placeholder-shown) + .about-product__placeholder{
-    opacity: 0;
+.about-product__message:not(:placeholder-shown) + .about-product__placeholder {
+  opacity: 0;
 }
 
-.about-product__submit{
-   background: #F8D24E;
-   padding: 12px 34px;
-   font-weight: 600;
-   font-size: 12px;
-   line-height: calc(15/12);
-   color: #131313;
-   border: none;
-   border-radius: 10px;
-   @media screen and (min-width:768px) {
-      margin-top: 16px;
-}
+.about-product__submit {
+  background: #f8d24e;
+  padding: 12px 34px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: calc(15 / 12);
+  color: #131313;
+  border: none;
+  border-radius: 10px;
+  @media screen and (min-width: 768px) {
+    margin-top: 16px;
+  }
 }
