--- a/src/sass/_buy-now-modal.scss
+++ b/src/sass/_buy-now-modal.scss
@@ -1,262 +1,266 @@
 /* Стили для подложки */
 
 .overlay {
-   
-   /* Скрываем подложку  */
-   opacity: 0;
-   visibility: hidden;
-   
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, .5);
-   z-index: 20;
-   transition: .3s all;
-   @media screen and (max-height:991px) {
-      overflow: scroll;
-   }
-}
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+  @media screen and (max-height: 991px) {
+    overflow: scroll;
+  }
+}
 
 /* Стили для модальных окон */
 .modal {
-   opacity: 0;
-   visibility: hidden;
-   
+  opacity: 0;
+  visibility: hidden;
 }
-.buy-now{
-   
-   
-   /*  Установаем ширину окна  */
-   width: 100%;
-   max-width: 280px;
-   
-   /*  Центрируем и задаем z-index */
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   z-index: 999; /* Должен быть выше чем у подложки*/
-   
-   /*  Побочные стили   */
-   box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2); 
-   text-align: center;
-   padding: 28px;
-   border-radius: 3px;
-   background-color: #FCFCFC;
-   transition: 0.3s all;
-   border: 2px solid #F8D24E;
-   
-       @media screen and (max-height:991px) and (max-width:767px){
-      top: 10px;
-      transform: translate(-50%, 0);
-   }
-   @media screen and (max-height:675px) and (min-width:768px) {
-      top: 10px;
-      transform: translate(-50%, 0);
-   }
-   @media screen and (min-width:768px) {
-      max-width: 568px;
-      padding: 32px 54px;
-   }
-}
+.buy-now {
+  /*  Установаем ширину окна  */
+  width: 100%;
+  max-width: 280px;
 
+  /*  Центрируем и задаем z-index */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999; /* Должен быть выше чем у подложки*/
+
+  /*  Побочные стили   */
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 28px;
+  border-radius: 3px;
+  background-color: #fcfcfc;
+  transition: 0.3s all;
+  border: 2px solid #f8d24e;
+
+  @media screen and (max-height: 991px) and (max-width: 767px) {
+    top: 10px;
+    transform: translate(-50%, 0);
+  }
+  @media screen and (max-height: 675px) and (min-width: 768px) {
+    top: 10px;
+    transform: translate(-50%, 0);
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 568px;
+    padding: 32px 54px;
+  }
+}
 
 /* Стили для активных классов подложки и окна */
 
 .modal.active,
-.overlay.active{
-   opacity: 1;
-   visibility: visible;
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
 }
-
 
 /* Стили для кнопки закрытия */
 
-.modal__close{
-   width: 13px;
-   height: 13px;
-   top: 12px;
-   right: 12px;
-   position: absolute;
+.modal__close {
+  width: 13px;
+  height: 13px;
+  top: 12px;
+  right: 12px;
+  position: absolute;
 }
-.modal-close{
-   fill: #000;
+.modal-close {
+  fill: #000;
 }
-
 
 /* Стили для кнопок. Мы ведь порядочные разработчики, негоже простые ссылки оставлять */
 
-
-.buy-now{
-   display: flex;
-   align-items: center;
-   flex-direction: column;
+.buy-now {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.buy-now__title{
-   display: block;
-   font-family: 'Seymour One';
-   font-size: 16px;
-   line-height :1.5 ;
-   margin-bottom: 83px;
-   @media screen and (min-width:768px) {
-      font-size: 20px;
-      line-height: 1.4;
-      margin-bottom: 103px;
-   }
+.buy-now__title {
+  display: block;
+  font-family: 'Seymour One';
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 83px;
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 103px;
+  }
 }
-.buy-now-products{
-   margin-bottom: 31px;
-      @media screen and (min-width:768px) {
-      display: flex;
-      gap: 32px;
-      margin-bottom: 40px;
-   }
+.buy-now-products {
+  margin-bottom: 31px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    gap: 32px;
+    margin-bottom: 40px;
+  }
 }
-.buy-now__wrapper{
-   width: 132px;
-   height: 132px;
-   border-radius: 98px;
-   position: absolute;
-   top: -56;
-   left: -2;
-   background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
-   box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
-   margin-bottom: 20px;
-
+.buy-now__wrapper {
+  width: 132px;
+  height: 132px;
+  border-radius: 98px;
+  position: absolute;
+  top: -56;
+  left: -2;
+  background: linear-gradient(
+      0deg,
+      rgba(156, 190, 143, 0.7),
+      rgba(156, 190, 143, 0.7)
+    ),
+    #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+  margin-bottom: 20px;
 }
-.buy-now__wrapper--yellow{
-   background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
-   box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+.buy-now__wrapper--yellow {
+  background: linear-gradient(
+      0deg,
+      rgba(248, 210, 78, 0.7),
+      rgba(248, 210, 78, 0.7)
+    ),
+    #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
 }
-.buy-now__wrapper--orange{
-   background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
-   box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+.buy-now__wrapper--orange {
+  background: linear-gradient(
+      0deg,
+      rgba(213, 117, 63, 0.7),
+      rgba(213, 117, 63, 0.7)
+    ),
+    #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
 }
-.buy-now__img{
-   position: absolute;
-   top: -7;
-   left: 0;
+.buy-now__img {
+  position: absolute;
+  top: -7;
+  left: 0;
 }
-.buy-now__item{
-   border: 2px solid #96AF8C;
-   border-radius: 15px;
-   width: 132px;
-   position: relative;
-   padding: 96px 16px 20px 16px;
-   transition: border 250ms var(--transition-timing-function);
-   &:not(:last-child){
-      margin-bottom: 82px;
-   } 
-   &:hover{
-      background-color:#96AF8C ;
-   }
-   @media screen and (min-width:768px) {
-      &:not(:last-child){
+.buy-now__item {
+  border: 2px solid #96af8c;
+  border-radius: 15px;
+  width: 132px;
+  position: relative;
+  padding: 96px 16px 20px 16px;
+  transition: border 250ms var(--transition-timing-function);
+  &:not(:last-child) {
+    margin-bottom: 82px;
+  }
+  &:hover {
+    background-color: #96af8c;
+  }
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
       margin-bottom: 0px;
-   } 
-   }
+    }
+  }
 }
-.buy-now__item--yellow{
-   border: 2px solid #F8D24E;
-   &:hover{
-   background-color:#F8D24E;
-   }
+.buy-now__item--yellow {
+  border: 2px solid #f8d24e;
+  &:hover {
+    background-color: #f8d24e;
+  }
 }
-.buy-now__item--orange{
-   border: 2px solid #D6936D;
-      &:hover{
-   background-color:#D6936D;
-   }
+.buy-now__item--orange {
+  border: 2px solid #d6936d;
+  &:hover {
+    background-color: #d6936d;
+  }
 }
-.buy-now__text{
-   font-weight: 700;
-   font-size: 16px;
-   line-height: calc(20/16);
-   letter-spacing: 0.04em;
-   text-transform: uppercase;
-   color: #131313;
+.buy-now__text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #131313;
 }
 
+.buy-now__group {
+  position: relative;
+  margin-bottom: 12px;
+  @media screen and (min-width: 768px) {
+    width: 368px;
+    margin-bottom: 16px;
+  }
+}
+.buy-now__name {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.buy-now__field {
+  width: 100%;
+  height: 32px;
+  padding: 0 12px;
+  background: rgba(248, 210, 78, 0.1);
+  border: none;
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  outline: unset;
+  font-size: 12px;
+  line-height: 1.4;
 
-.buy-now__group{
-   position: relative;
-   margin-bottom: 12px;
-   @media screen and (min-width:768px) {
-   width: 368px ;
-   margin-bottom: 16px;
+  &:focus-within {
+    border: 2px solid #84a178;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 0 16px;
+    height: 42px;
+    font-size: 14px;
+    line-height: 1.4;
+  }
 }
+.buy-now__placeholder {
+  position: absolute;
+  left: 12px;
+  top: 11px;
 }
-.buy-now__name{
-   position: absolute;
-   left: 12px;
-   top: 50%;
-   transform: translateY(-50%);
-}
-.buy-now__field{
-   width: 100%;
-   height: 32px;
-   padding: 0 12px;
-   background: rgba(248, 210, 78, 0.1);
-   border: none;
-   border: 1px solid #84A178;
-   border-radius: 10px;
-   outline: unset;
-   font-size: 12px;
-   line-height: 1.4;
-
-   &:focus-within{
-      border: 2px solid #84A178;
-   }
-      @media screen and (min-width:768px) {
-   padding: 0 16px;
-   height: 42px;
-   font-size: 14px;
-   line-height: 1.4;
-}
-}
-.buy-now__placeholder{
-   position: absolute;
-   left: 12px;
-   top: 11px;
-}
-.buy-now__message{
-   width: 100%;
-   height: 65px;
-   resize: none;
-   padding: 8 12px;
-   background: rgba(248, 210, 78, 0.1);
-   border: 1px solid #84A178;
-   border-radius: 10px;
-   outline: unset;
-      &:focus-within{
-      border: 2px solid #84A178;
-   }
-         @media screen and (min-width:768px) {
-   padding: 11 16px;
-   height: 84px;
-}
+.buy-now__message {
+  width: 100%;
+  height: 65px;
+  resize: none;
+  padding: 8 12px;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84a178;
+  border-radius: 10px;
+  outline: unset;
+  &:focus-within {
+    border: 2px solid #84a178;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 11 16px;
+    height: 84px;
+  }
 }
 .buy-now__label:focus-within .buy-now__name,
 .buy-now__field:not(:placeholder-shown) + .buy-now__name,
 .buy-now__label:focus-within .buy-now__placeholder,
-.buy-now__message:not(:placeholder-shown) + .buy-now__placeholder{
-    opacity: 0;
+.buy-now__message:not(:placeholder-shown) + .buy-now__placeholder {
+  opacity: 0;
 }
 
-.buy-now__submit{
-   background: #F8D24E;
-   padding: 12px 34px;
-   font-weight: 600;
-   font-size: 12px;
-   line-height: calc(15/12);
-   color: #131313;
-   border: none;
-   border-radius: 10px;
-   @media screen and (min-width:768px) {
-      margin-top: 16px;
-}
+.buy-now__submit {
+  background: #f8d24e;
+  padding: 12px 34px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: calc(15 / 12);
+  color: #131313;
+  border: none;
+  border-radius: 10px;
+  @media screen and (min-width: 768px) {
+    margin-top: 16px;
+  }
 }
