--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,15 +1,22 @@
 <section class="section hero">
   <div class="hero_overlay">
     <div class="container-left">
-      <h1 class="hero-title">ice cream made with passion</h1>
+      <h1 class="hero-title">
+        ice cream made with
+        <p class="hero-title__passion">passion</p>
+      </h1>
 
       <div class="about-ice-cream">
         <ul class="about-ice-cream__list list">
           <li class="about-ice-cream__anchor products-anchor">
-            <a class="about-ice-cream__link link-products link" href="#products">Products</a>
+            <a class="about-ice-cream__link link-products link" href="#products"
+              >Products</a
+            >
           </li>
           <li class="about-ice-cream__anchor">
-            <a class="about-ice-cream__link link-made link" href="#advantages">How it's made?</a>
+            <a class="about-ice-cream__link link-made link" href="#advantages"
+              >How it's made?</a
+            >
           </li>
         </ul>
       </div>
@@ -17,19 +24,25 @@
         <ul class="info-with-arrow__list list">
           <li>
             <div class="many-ice-cream__wrap">
-              <img class="many-ice-cream__img" srcset="
-                      ./images/hero/many-ice-cream-tablet.png    152w,
-                      ./images/hero/many-ice-cream-tablet2x.png  304w,
-                      ./images/hero/many-ice-cream-desctop.png   225w,
-                      ./images/hero/many-ice-cream-desctop2x.png 550w
-                    " sizes="(min-width: 1200px) 225px, (min-width: 768px) 152px, 100vw"
-                src="./images/hero/many-ice-cream-tablet.png" alt="Many ice-cream on a plate" loading="lazy" />
+              <img
+                class="many-ice-cream__img"
+                srcset="
+                  ./images/hero/many-ice-cream-tablet.png    152w,
+                  ./images/hero/many-ice-cream-tablet2x.png  304w,
+                  ./images/hero/many-ice-cream-desctop.png   225w,
+                  ./images/hero/many-ice-cream-desctop2x.png 550w
+                "
+                sizes="(min-width: 1200px) 225px, (min-width: 768px) 152px, 100vw"
+                src="./images/hero/many-ice-cream-tablet.png"
+                alt="Many ice-cream on a plate"
+                loading="lazy"
+              />
             </div>
           </li>
           <li>
             <p class="info-with-arrow__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-              do eiusmod tempor incididunt ut labore et
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
             </p>
           </li>
         </ul>
@@ -38,15 +51,22 @@
 
     <div class="container-right">
       <div class="container-center">
-        <img class="ice-creame-conus" srcset="
-                  ./images/hero/ice-cream-mobile.png    177w,
-                  ./images/hero/ice-cream-tablet.png    268w,
-                  ./images/hero/ice-cream-mobile2x.png  344w,
-                  ./images/hero/ice-cream-desktop.png   456w,
-                  ./images/hero/ice-cream-tablet2x.png  534w,
-                  ./images/hero/ice-cream-desktop2x.png 912w
-                " sizes="(min-width: 480px) 177px, (min-width: 768px) 268px, (min-width: 1200px) 456px,  100vw"
-          src="./images/hero/ice-cream-mobile.png" alt="ice-creame cones" loading="lazy" />
+        <img
+          class="ice-creame-conus"
+          srcset="
+            ./images/hero/ice-cream-mobile.png    177w,
+            ./images/hero/ice-cream-tablet.png    268w,
+            ./images/hero/ice-cream-mobile2x.png  344w,
+            ./images/hero/ice-cream-desktop.png   456w,
+            ./images/hero/ice-cream-tablet2x.png  534w,
+            ./images/hero/ice-cream-desktop2x.png 912w
+          "
+          sizes="(min-width: 1200px) 456px, (min-width: 768px) 268px, (min-width: 350px) 177px, 100vw"
+          src="./images/hero/ice-cream-mobile.png"
+          alt="ice-creame cones"
+          loading="lazy"
+      
+        />
       </div>
       <div class="ownership">
         <ul class="ownership__list list">
