--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -2,14 +2,8 @@
   <!-- <button class="button-close"> -->
   <svg
     data-modal-close
-    class="modal__close js-modal-close"
-    xmlns="http://www.w3.org/2000/svg"
-    viewBox="0 0 24 24"
-  >
-    <path
-      d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
-    />
-  </svg>
+    class="modal__close js-modal-close"><use xlink:href="./images/svg/symbol-defs.svg#icon-close"></svg>
+  
   <!-- </button> -->
   <p class="modal-locations_label">Our Locations</p>
   <div>
