--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -153,7 +153,7 @@
   <div class="btn">
     <ul class="btn__list list">
       <li class="btn__item">
-        <button class="btn__our-locations">
+        <button class="btn__our-locations js-open-modal" data-modal="5">
           Our Locations
           <svg class="svg-icon" width="12" height="12">
             <use
