--- a/src/partials/buy-now-modal.html
+++ b/src/partials/buy-now-modal.html
@@ -3,15 +3,9 @@
   <!--   Svg иконка для закрытия окна  -->
 
   <svg
-    data-modal-close
-    class="modal__close js-modal-close"
-    xmlns="http://www.w3.org/2000/svg"
-    viewBox="0 0 24 24"
-  >
-    <path
-      d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
-    />
-  </svg>
+        data-modal-close
+           class="modal__close js-modal-close"><use xlink:href="./images/svg/symbol-defs.svg#icon-close">
+      </svg>
   <!-- <button class="buy-now__button">
             <svg class="modal__close js-modal-close" width="24" height="24">
         <use href="./images/svg/symbol-defs.svg#close"></use>
