убрал падинги в контейнере

--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -8,8 +8,8 @@
     // padding-left: 20px;
     // padding-right: 20px;
 
-    padding-left: 40px;
-    padding-right: 40px;
+    // padding-left: 40px;
+    // padding-right: 40px;
   }
 
   @media screen and (min-width: 480px) {
@@ -19,14 +19,14 @@
   @media screen and (min-width: 768px) {
     width: 704px;
 
-    padding-left: 32px;
-    padding-right: 32px;
+    // padding-left: 32px;
+    // padding-right: 32px;
   }
 
   @media screen and (min-width: 1200px) {
     width: 1168px;
 
-    padding-left: 16px;
-    padding-right: 16px;
+    //   padding-left: 16px;
+    //   padding-right: 16px;
   }
 }
