--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
-        <div class="footer__border">
+    <div class="container">
+        <div class="footer__content">
             <p class="footer__title"> homemade ice cream <span class="made">made</span> <span class="footer__title-passion"> with <br
                         class="title_br"> passion</span></p>
             <div class="footer__links">
@@ -31,6 +32,10 @@
                         (0) 383 766 284</span></a>
                 </p>
                         </div>
+                        </div>
+                        </div>
+                        <div class="container-2">
+                            <div class="border"></div>
                         </div>
                         <div class="company">
                             <p class="footer__company">© 2022 - IceCream. <br class="br"> All Rights Reserved.</p>
