1 code fix mobile menu

--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -31,7 +31,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   padding: 20px 32px 32px 20px;
   background-color: var(--brand-green);
   z-index: 899;
