--- a/src/sass/_franchise.scss
+++ b/src/sass/_franchise.scss
@@ -43,8 +43,8 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  // width: 280px;
-  // height: 674px;
+  width: 280px;
+  height: 674px;
   padding: 28px;
   background-color: #fcfcfc;
   border: 2px solid #f8d24e;
@@ -53,7 +53,7 @@
 
   @media screen and (min-width: 768px) {
     width: 568px;
-    // height: 668px;
+    max-height: 668px;
     padding-top: 32px;
     padding-right: 60px;
     padding-bottom: 32px;
